Brink Theme/Brink.css
/* ... */
[data-owner="1"] .list-table[data-items="[]"]::before {
	/* No Entries (Owner) */
	content: "No entries found. Why not add some?";
}
[data-query*='"s":'] .list-table[data-items="[]"]::before {
	/* No Entries (Bad Search) */
	content: "No entries found. Perhaps your search terms are too restrictive?";
}

@media (min-width: 1150.5px) {
	.list-table[data-items="[]"]::before {
		--items: 5;
		--offset: 20%;
	}
}

@media (min-width: 1597.5px) {
	.list-table[data-items="[]"]::before {
		--items: 7;
		--offset: 25%;
	}
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Item-Base
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.list-item {
	position: relative;
	z-index: 1;
	
	display: block;
	width: 210px;
	height: 300px;
	background: none !important;
	margin: calc((300px * -0.025) + 12px) calc((210px * -0.025) + 12px);
	flex: 0 0 auto;
	
	color: hsl(var(--text));
	
	transform: scale(0.95);
	transition: all var(--timeItem) var(--bezierItemBounce);
} .list-item:hover,
.list-item:focus-within {
	transform: scale(1);
}

.list-table-data {
	display: flex;
	width: 50%;
	padding: 13px 0 0 12px;
	flex-flow: column nowrap;
	align-items: flex-start;
}

.list-table .list-table-data .data {
	padding: 0;
	border-width: 0;
	border-style: solid;
}

.data:not(.image) {
	z-index: 5;
	text-shadow: -0.6px 0.84px 1.68px #000;
	line-height: 15px;
	opacity: 0;
	transition:
		all var(--timeButton) var(--bezierFast),
		opacity calc(var(--timeItem) * 1.5) var(--bezierFast);
} .list-item:hover .data:not(.image),
.list-item:focus-within .data:not(.image){
	opacity: 1;
}

.list-table .list-table-data .data a {
	color: hsl(var(--text)) !important;
	transition-property: all;
} .list-table .list-table-data .data a:not(.edit-disabled):hover,
.list-table .list-table-data .data a:not(.edit-disabled):focus {
	color: hsl(var(--textLinkHov)) !important;
} .list-table .list-table-data a.edit-disabled {
	pointer-events: none;
}

/* Dynamic Columns */

.data.type,
.data.rated,
.data.season,
.data.started,
.data.finished,
.data.days,
.data.airing-started,
.data.airing-finished,
.data.genre,
.data.demographic,
.data.studio,
.data.licensor,
.data.magazine,
.data.priority,
.data.storage,
.data.retail {
	position: relative;
	
	max-width: 100%;
	min-height: 15px;
	padding-left: 15px !important;
	margin-bottom: 4px;
	
	text-align: left !important;
	overflow-wrap: break-word;
	
	cursor: default;
}

/* Icons */

.data.type::after,
.data.rated::after,
.data.season::after,
.data.started::after,
.data.days::before,
.data.airing-started::after,
.data.genre::after,
.data.demographic::after,
.data.studio::after,
.data.licensor::after,
.data.magazine::after,
.data.priority::after,
.data.storage::after,
.data.retail::after {
	position: absolute;
	top: 0;
	left: -3px;
	
	width: 16px;
	height: 15px;
	
	color: hsla(var(--text), 83%);
	text-align: center;
}

/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Image
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.data.image,
.data.image .link,
.data.image .image,
.data.image .link::after {
	position: absolute;
	left: 0;
	top: 0;
	
	width: 100% !important;
	height: 100% !important;
	border: none !important;
	object-fit: cover;
}

.data.image {
	z-index: -1;	
	background: hsla(var(--bg), 70%);
	border-radius: 6px;
	box-shadow: -1.2px 1.68px 3.36px hsla(0, 0%, 0%, 35%);
	overflow: hidden;
	pointer-events: none;
}

.data.image .link {
	filter:
		brightness(var(--imageBrightness))
		opacity(var(--imageBrightness));
	transition: filter var(--timeItem) var(--bezierFast) !important;
} .list-item:hover .data.image .link,
.list-item:focus-within .data.image .link {
	filter:
		brightness(var(--imageBrightnessHov))
		opacity(var(--imageBrightnessHov))
		blur(var(--imageBlurHov));
}

.data.image .link::after {
	content: "";
	background: center / cover no-repeat scroll;
	background-image: inherit;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Status
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.data.status {
	position: absolute;
	left: 0;
	top: 0;
	z-index: 15 !important;
	
	width: 100% !important;
	height: 100%;
	background: none !important;
	border-bottom-width: 4px !important;
	border-radius: 6px;
	
	pointer-events: none;
} .data.status.watching,
.data.status.reading {
	border-color: hsl(var(--current));
} .data.status.completed {
	border-color: hsl(var(--completed));
} .data.status.onhold {
	border-color: hsl(var(--paused));
} .data.status.dropped {
	border-color: hsl(var(--dropped));
} .data.status.plantowatch,
.data.status.plantoread {
	border-color: hsl(var(--planned));
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Title
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.data.title {
	position: absolute;
	bottom: 0;
	left: 0;
	z-index: 9;
	
	width: 100%;
	padding: 5px 0 27px !important;
	background: hsla(var(--btn), var(--infoBGOpacity));
	border-radius: 0 0 6px 6px;
	order: 95;
	
	font-size: 0;
	
	opacity: 1;
}

.data.title .link {
	display: inline-block;
	max-width: 100%;
	max-height: 64px;
	padding: 5px 12px;
	overflow: hidden;
	
	font-size: 13px !important;
	line-height: 18px;
}


div[class^="icon-watch"] {
	display: inline;
}

.mal-icon {
	position: static !important;
}

.malicon {
	position: absolute;
	bottom: 12px;
	right: 7.5px;
	z-index: 1;
	
	width: auto;
	height: 15px;
	
	font-size: 0 !important;
	text-shadow: 0.84px 0.6px 1.68px #000;
	
	transform: rotate(90deg);
	transform-origin: right bottom;
	
	/*Toggle*/
	visibility: var(--toggleStreaming);
}

.malicon::after {
	content: "\f144  WATCH";
	
	color: hsla(var(--text), 80%);
	font-size: 12px;
	font-style: normal;
	line-height: 1;
	letter-spacing: 1.5px;
	white-space: nowrap;
	
	transition: color var(--timeText) var(--bezierFast);
} .malicon:hover::after,
.malicon:focus::after {
	color: hsl(var(--textLinkHov));
}
/* ... */

